[gd_scene load_steps=8 format=2]

[ext_resource path="res://shared/managers/visibility_based_audio/VisibilityBasedSoundManager.tscn" type="PackedScene" id=1]
[ext_resource path="res://shared/managers/visibility_based_audio/VisibilityBasedAudioGroup.tscn" type="PackedScene" id=2]
[ext_resource path="res://actors/enemies/projectiles/laser/laser_sound_manager.gd" type="Script" id=3]
[ext_resource path="res://shared/managers/visibility_based_audio/VisibilityBasedAudioPlayer.tscn" type="PackedScene" id=4]
[ext_resource path="res://actors/enemies/projectiles/laser/audio/laser_wind_down.wav" type="AudioStream" id=5]
[ext_resource path="res://actors/enemies/projectiles/laser/audio/laser_shoot.wav" type="AudioStream" id=6]
[ext_resource path="res://actors/enemies/projectiles/laser/audio/laser_telegraph.wav" type="AudioStream" id=7]

[node name="LaserSoundManager" instance=ExtResource( 1 )]
script = ExtResource( 3 )

[node name="VisibilityBasedAudioGroup" parent="AudioGroups" index="0" instance=ExtResource( 2 )]
attenuation_visibility_radius_tiles = 16.0

[node name="Telegraph" parent="AudioGroups/VisibilityBasedAudioGroup/AudioPlayers" index="0" instance=ExtResource( 4 )]
stream = ExtResource( 7 )

[node name="Shoot" parent="AudioGroups/VisibilityBasedAudioGroup/AudioPlayers" index="1" instance=ExtResource( 4 )]
stream = ExtResource( 6 )

[node name="WindDown" parent="AudioGroups/VisibilityBasedAudioGroup/AudioPlayers" index="2" instance=ExtResource( 4 )]
stream = ExtResource( 5 )

[editable path="AudioGroups/VisibilityBasedAudioGroup"]
